# posturisk

./: .gitignore  README.md  pyproject.toml  requirements.txt  rewrite_author.sh
notebooks/: .gitkeep  01_eda.ipynb  02_features.ipynb  03_model_evaluation.ipynb  04_explainability.ipynb
src/posturisk/: __init__.py  explain.py  features.py  fetch_data.py  preprocess.py  train.py
tests/: __init__.py  test_explain.py  test_features.py  test_fetch_data.py  test_preprocess.py  test_train.py
